--- a/style.css
+++ b/style.css
@@ -20,12 +20,19 @@
   margin-left: 350px;
 }
 
+#marquee {
+  color: tomato;
+  font-weight: bold;
+}
+
 /*navbar*/
 
 .navbar {
   background-color: #49688e;
-  padding-bottom: 10px;
-  
+  padding: 0px;
+  border-bottom-width: 10px;
+  border-bottom-style: solid;
+  border-bottom-color: #ffc107;
 }
 
 .nav-link {
@@ -33,8 +40,29 @@
   font-family: Verdana;
 }
 
+.nav-item {
+  border-right-width: 2px;
+  border-right-style: solid;
+  border-right-color: white;
+}
+
 .dropdown-item {
   font-family: Verdana;
+}
+
+/*Konten*/
+.card-body {
+  background-color:thistle;
+  padding-bottom:10px;
+}
+
+.card-title {
+  color:#49688e;
+}
+
+.card-link {
+  text-decoration: none;
+  color:#49688e;
 }
 
 /*Top footer*/
@@ -55,7 +83,7 @@
   list-style: none;
   text-align: center;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
 }
 
 .ul-footer li {
