--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ h1 {
   font-family: Verdana;
 }
 
+.nav-link:hover {
+  color: white; /*hover untuk merubah warna ketika disorot kursor*/
+}
+
 .nav-item {
   border-right-width: 2px;
   border-right-style: solid;
@@ -52,6 +56,11 @@ h1 {
 
 .dropdown-item {
   font-family: Verdana;
+  color: white;
+}
+
+.dropdown-menu {
+  background-color: #294a70;
 }
 
 /*Konten*/
@@ -61,8 +70,8 @@ h1 {
 }
 .card-body {
   background-color: #f3f3f3;
-  padding-bottom: 5px;
-  border-top: 5px;
+
+  border-top: 0px;
 }
 
 .card-title {
@@ -72,6 +81,12 @@ h1 {
 .card-link {
   text-decoration: none;
   color: #49688e;
+}
+
+/* index+1 */
+
+p {
+  text-align: justify;
 }
 
 /*Top footer*/
